# Sliceify

./: .gitignore  Dockerfile  app.py  app_config.py  batch_extrude.py  image_moodboard.py  imports.py  output.css  pyproject.toml  requirements.txt  tailwind.config.js  test.py
.github/workflows/: docker-image.yml
instance/: db.sqlite
logic/: general.py  job.py  logic.py  user.py
routes/: job.py  user.py
templates/: config.html  dxf.html  index.html  layout.html  rotate.html  slices.html
templates/errors/: auth.html  not_your_job.html
templates/forms/: 2fa.html  account.html  login.html  signup.html
templates/job/: dxf.html  progress.html  slices.html  start.html  success.html  viewfiles.html
web/: app.py  requirements.txt
web/templates/: success.html
