[project]
name = "sliceify"
version = "0.1.0"
description = ""
authors = [
    {name = "Owen",email = "92629980+GalacticSquirel@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
